--- a/AWS Lambdas/template.yaml
+++ b/AWS Lambdas/template.yaml
@@ -15,7 +15,7 @@ Resources:
   LamqBucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: com-github-leicmi-cloud-computing-lamq
+      BucketName: com-github-leicmi-cloud-computing-lamq # workaround to avoid circular dependency, see below
   LamqResizedBucket:
     Type: AWS::S3::Bucket
     Properties:
@@ -34,7 +34,7 @@ Resources:
             Events: s3:ObjectCreated:*
       Policies:
         - S3ReadPolicy: 
-            BucketName: com-github-leicmi-cloud-computing-lamq
+            BucketName: com-github-leicmi-cloud-computing-lamq # workaround to avoid circular dependency https://github.com/awslabs/serverless-application-model/issues/138 and https://github.com/awslabs/serverless-application-model/issues/1109#issuecomment-526302409
         - S3WritePolicy: 
             BucketName: !Ref LamqResizedBucket
   ListFunction: 
