--- a/config.yml.sample
+++ b/config.yml.sample
@@ -1,1 +1,2 @@
 apiurl: 'https://3cx9sdmyld.execute-api.eu-central-1.amazonaws.com/Prod'
+logGroupName: "/aws/lambda/com-github-leicmi-cloud-computing-ConvertFunction-THKUPVCJIEO3"
