--- a/AWS Lambdas/template.yaml
+++ b/AWS Lambdas/template.yaml
@@ -11,9 +11,57 @@ Globals:
     Timeout: 5
     Tracing: Active # https://docs.aws.amazon.com/lambda/latest/dg/lambda-x-ray.html
 
+Parameters:
+  ConversionFileType:
+    Type: String
+    Default: png
+  ConversionMimeType:
+    Type: String
+    Default: image/png 
+  ThumbnailWidth:
+    Type: Number
+    Default: 500
+
 Resources: 
   LamqBucket:
     Type: AWS::S3::Bucket
+
+  ResultsBucket:
+    Type: AWS::S3::Bucket
+
+  ImageMagick:
+    Type: AWS::Serverless::Application
+    Properties:
+      Location:
+        ApplicationId: arn:aws:serverlessrepo:us-east-1:145266761615:applications/image-magick-lambda-layer
+        SemanticVersion: 1.0.0
+
+  ConvertFileFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      Handler: index.handler
+      Timeout: 180
+      MemorySize: 1024
+      Runtime: nodejs10.x
+      CodeUri: src
+      Layers:
+          - !GetAtt ImageMagick.Outputs.LayerVersion
+      Policies:
+      - S3CrudPolicy:
+          BucketName: !Sub "${AWS::StackName}-*"
+      Environment:
+        Variables:
+          OUTPUT_BUCKET: !Ref ResultsBucket
+          EXTENSION: !Sub '.${ConversionFileType}'
+          MIME_TYPE: !Ref ConversionMimeType
+          THUMB_WIDTH: !Ref ThumbnailWidth
+      Events:
+        FileUpload:
+          Type: S3
+          Properties:
+            Bucket: !Ref LamqBucket
+            Events: s3:ObjectCreated:*  
+  
   ListFunction: 
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties: 
@@ -124,3 +172,9 @@ Outputs: # Shown in terminal when `sam deploy` is invoked
   API: 
     Description: "API Gateway endpoint URL"
     Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod"
+  LamqBucket:
+     Description: "Upload S3 bucket"
+     Value: !Ref UploadBucket
+  ResultsBucket:
+     Description: "Results S3 bucket"
+     Value: !Ref ResultsBucket
