--- a/AWS Lambdas/Makefile
+++ b/AWS Lambdas/Makefile
@@ -4,10 +4,13 @@ STACK_NAME ?= imagemagick-layer-example
 IMAGE_MAGICK_STACK_NAME ?= imagemagick-layer
 
 IMAGEMAGICK_LAYER ?=$(shell aws cloudformation describe-stacks --stack-name $(IMAGE_MAGICK_STACK_NAME) --query Stacks[].Outputs[].OutputValue --output text)
-SOURCES=$(shell find ImageMagickSrc/)
+SOURCES=$(shell find ImageMagick/)
 
 build:
 	sam build
+
+deploy:
+	sam deploy -g
 
 output.yaml: template.yaml $(SOURCES)
 	mkdir -p build
@@ -16,7 +19,8 @@ output.yaml: template.yaml $(SOURCES)
 deploy: output.yaml
 	aws cloudformation deploy --template-file $< --stack-name $(STACK_NAME) --capabilities CAPABILITY_IAM 
 	aws cloudformation describe-stacks --stack-name $(STACK_NAME) --query Stacks[].Outputs --output table
-	sam deploy -g
+
+
 
 clean:
 	rm -rf .aws-sam/build
