Add default region to samconfig.toml

--- a/.github/workflows/ci without deploy.yml
+++ b/.github/workflows/ci without deploy.yml
@@ -26,6 +26,7 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: 'eu-central-1'
         run: 'sam build'
 
       - name: sam deploy view changeset
@@ -33,4 +34,5 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: 'eu-central-1'
         run: 'sam deploy --no-execute-changeset --no-fail-on-empty-changeset'
