--- a/AWS Lambdas/template.yaml
+++ b/AWS Lambdas/template.yaml
@@ -85,7 +85,7 @@ Resources:
         CatchAll: 
           Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
           Properties: 
-            Path: /default/list
+            Path: /list
             Method: GET
       Environment: # More info about Env Vars: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#environment-object
         Variables: 
@@ -103,7 +103,7 @@ Resources:
         CatchAll: 
           Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
           Properties: 
-            Path: /default/pending
+            Path: /pending
             Method: POST
       Environment: # More info about Env Vars: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#environment-object
         Variables: 
@@ -121,7 +121,7 @@ Resources:
         CatchAll: 
           Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
           Properties: 
-            Path: /default/upload
+            Path: /upload
             Method: POST
       Environment: # More info about Env Vars: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#environment-object
         Variables: 
