--- a/AWS Lambdas/template.yaml
+++ b/AWS Lambdas/template.yaml
@@ -73,7 +73,7 @@ Resources:
         CatchAll: 
           Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
           Properties: 
-            Path: /default/list
+            Path: /list
             Method: GET
       Environment: # More info about Env Vars: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#environment-object
         Variables: 
@@ -91,7 +91,7 @@ Resources:
         CatchAll: 
           Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
           Properties: 
-            Path: /default/pending
+            Path: /pending
             Method: POST
       Environment: # More info about Env Vars: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#environment-object
         Variables: 
@@ -109,7 +109,7 @@ Resources:
         CatchAll: 
           Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
           Properties: 
-            Path: /default/upload
+            Path: /upload
             Method: POST
       Environment: # More info about Env Vars: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#environment-object
         Variables: 
