--- a/AWS Lambdas/template.yaml
+++ b/AWS Lambdas/template.yaml
@@ -23,10 +23,24 @@ Parameters:
 Resources: 
   LamqBucket:
     Type: AWS::S3::Bucket
-
+   Properties:
+    LifecycleConfiguration:
+      Rules:
+        - Id: AutoDeletion
+        Prefix: ''
+        Status: 'Enabled'
+        ExpirationInDays: 1
+      
   ResultsBucket:
     Type: AWS::S3::Bucket
-
+   Properties:
+    LifecycleConfiguration:
+      Rules:
+        - Id: AutoDeletion
+        Prefix: ''
+        Status: 'Enabled'
+        ExpirationInDays: 1
+        
   ImageMagick:
     Type: AWS::Serverless::Application
     Properties:
