--- a/AWS Lambdas/template.yaml
+++ b/AWS Lambdas/template.yaml
@@ -32,6 +32,12 @@ Resources:
       
   ResultsBucket:
     Type: AWS::S3::Bucket
+    Properties:
+    LifecycleConfiguration:
+      Rules:
+      - Id: DeleteContentAfter1Day
+        Status: 'Enabled'
+        ExpirationInDays: 1
         
   ImageMagick:
     Type: AWS::Serverless::Application
