Change some things for the experiment

--- a/AWS Lambdas/Makefile
+++ b/AWS Lambdas/Makefile
@@ -1,10 +1,13 @@
-.PHONY: build deploy clean
+.PHONY: build deploy fastdeploy clean
 
 build:
 	sam build
 
 deploy:
 	sam deploy -g
+
+fastdeploy:
+	sam deploy
 
 clean:
 	rm -rf .aws-sam/build
